--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,42 @@
 body {
-	padding:						50px;
+	padding:			50px;
 	background-color: 	#6CF;
-	font-family:				sans-serif;
+	font-family:		sans-serif;
 }
 
 .todoListMain .header input {
-	padding: 						10px;
-	font-size: 					16px;
-	border: 						2px solid #FFF;
+	padding: 			10px;
+	font-size: 			16px;
+	border: 			2px solid #FFF;
 }
 
 .todoListMain .header button {
-	padding: 						10px;
-	font-size: 					16px;
-	margin: 						10px;
+	padding: 			10px;
+	font-size: 			16px;
+	margin: 			10px;
 	background-color: 	#06F;
-	color: 							#FFF;
-	border: 						2px solid #06F;
+	color: 				#FFF;
+	border: 			2px solid #06F;
 }
 
 .todoListMain .header button:hover {
 	background-color: 	#039;
-	border: 						2px solid #039;
-	cursor: 						pointer;
+	border: 			2px solid #039;
+	cursor: 			pointer;
 }
+
+.todoListMain .theList {
+	list-style: 		none;
+	padding-left: 		0;
+	width: 				255px;
+}
+
+.todoListMain .theList li {
+	color: 				#333;
+	background-color: 	rgba(255, 255, 255, 0.5);
+	padding: 			15px;
+	margin-bottom: 		15px;
+	border-radius: 		5px;
+}
+
+
