change width of list for ios and firefox

--- a/app/components/index.css
+++ b/app/components/index.css
@@ -5,8 +5,9 @@ body {
 }
 
 #container {
-	max-width: 			275px;
+	max-width: 			325px;
 	margin: 			auto;
+	text-align: 		center;
 }
 
 .todoListMain .header input {
